--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Freight</string>
+    <string name="app_name">木牛流马</string>
     <string name="service">联系客服 400–111-111</string>
     <string name="call">400111111</string>
 </resources>
